feat: Centralized port configuration
- Default port changed to 8080
- Environment variable configuration (DEV_PORT, PORT, TEST_PORT)
- GlobalExceptionMapper moved to config package
- Updated documentation and scripts